# VoxelEngine

./: .gitignore  CMakeLists.txt  TODOS.md
assets/shaders/: cube.frag  cube.vert  fragment.glsl  water.frag
assets/textures/: VoxelTextures.json
include/: camera.hpp  chunk.hpp  chunk_system.hpp  cube_renderable.hpp  directions.hpp  engine.hpp  gl_types.hpp  renderable.hpp  rendertypes.hpp  shader.hpp  shaderLoader.hpp  texture.hpp  vertex_buffers.hpp
include/block/: block.hpp  block_ids.hpp  block_loader.hpp  block_registry.hpp  block_uv.hpp
include/core/: engine.hpp  input_manager.hpp  renderable.hpp
include/gl/: popglfw.hpp
include/graphics/: camera.hpp  cube_renderable.hpp  rendertypes.hpp  shader.hpp  texture.hpp  vertex_buffers.hpp
include/util/: directions.hpp  math.hpp  ray.hpp  safe_queue.hpp
include/voxel/: chunk.hpp  chunk_system.hpp  terrain_generator.hpp
shaders/: fragment.glsl
src/: block.cpp  block_loader.cpp  camera.cpp  chunk.cpp  chunk_system.cpp  engine.cpp  input_manager.cpp  main.cpp  popglfw.cpp  shader.cpp  shaderLoader.cpp  terrain_generator.cpp  texture.cpp  vertex_buffers.cpp
